# goldsrc-maps

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
include/: shader.h  tokenizer.h
shaders/: mapShader.frag  mapShader.vert
src/: camera.cpp  camera.h  fpscamera.cpp  fpscamera.h  imgui_impl_glfw_gl3.cpp  main.cpp  orthocamera.cpp  orthocamera.h  program-about.cpp  program-menu.cpp  program-view.cpp  program.cpp  program.h
src/bsp/: bspparser.cpp  bspparser.h  bsprenderdata.cpp  bsprenderdata.h  bspscene.cpp  bspscene.h  bsptypes.h
src/common/: shader.cpp  tokenizer.cpp
src/map/: brushops.cpp  brushops.h  mapbrush.cpp  mapbrush.h  mapbrushside.cpp  mapbrushside.h  mapbrushsidematerial.cpp  mapbrushsidematerial.h  mapentity.cpp  mapentity.h  mapkeyvaluepair.cpp  mapkeyvaluepair.h  mapoperations.cpp  mapoperations.h  mapparser.cpp  mapparser.h  maprenderdata.cpp  maprenderdata.h  mapscene.cpp  mapscene.h
